--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col-sm-12 col-md-6" style="width: 100%;">
                         <div class="mh-skills-inner">
                             <div class="mh-professional-skill">
-                                <h3><b>Technical Skills</b></h3>
+                                <h3>Technical Skills</h3>
                                 <div class="each-skills">
                                     <div class="candidatos">
                                         <div class="parcial">
@@ -224,7 +224,7 @@
     
                     <div class="col-sm-12 col-md-6" style="width: 100%;">
                         <div class="mh-professional-skills">
-                            <h3 style="color:#00A78E;"><b>Professional Skills</b></h3>
+                            <h3 style="color:#00A78E;">Professional Skills</h3>
                             <ul class="mh-professional-progress">
                                 <li>
                                     <div class="mh-progress mh-progress-circle" data-progress="80"></div>
