--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>&copy; Copyright 2023 <br>Nisha. All rights reserved</p>
         </div>
     </header>
-    <!-- Mobile Nav Toggle -->s
+    <!-- Mobile Nav Toggle -->
     <i class="fa-solid fa-bars" id="MenuBtn"></i>
 
 
@@ -57,7 +57,7 @@
         <section id="home">
             <div class="home-row">
                 <h1>Hi, This is <br>Nisha<span>.</span></h1>
-                <p>i'm a <span class="auto-input">Data Analyst</span></p>
+                <p>I'm a <span class="auto-input">Data Analyst</span></p>
             </div>
         </section>
         <!-- ==== Home Section END === -->
