--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section id="home">
             <div class="home-row">
                 <h1>Hi, This is <br>Nisha<span>.</span></h1>
-                <p>i'm a <span class="auto-input">Data Analyst</span></p>
+                <p>i'm a <span class="auto-input">Associate Software Engineer</span></p>
             </div>
         </section>
         <!-- ==== Home Section END === -->
